--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo-checkbox": "^2.3.1",
     "link": "^1.5.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "^0.71.8",
     "react-native-gesture-handler": "^2.10.2",
@@ -37,6 +39,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
